# CODEX_TEST

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: admin_dishes.py  auth.py  cart.py  menu.py  orders.py
app/core/: config.py  database.py  exceptions.py  schema.py  security.py  storage.py
app/dependencies/: auth.py
app/models/: __init__.py  auth.py  base.py  cart.py  enums.py  menu.py  order.py  payment.py  user.py
app/repositories/: auth_repository.py  cart_repository.py  menu_repository.py  order_repository.py  payment_repository.py  user_repository.py
app/schemas/: auth.py  cart.py  common.py  menu.py  order.py  payment.py
app/services/: auth_service.py  cart_service.py  dish_image_service.py  menu_service.py  order_service.py  payment_service.py
backend/scripts/: seed.py
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/src/: main.tsx
frontend/src/app/: router.tsx
frontend/src/entities/auth/: types.ts
frontend/src/entities/cart/: hooks.ts  types.ts
frontend/src/entities/menu/: hooks.ts  types.ts
frontend/src/entities/order/: hooks.ts  types.ts
frontend/src/features/admin-menu/: MenuAdminPanel.tsx
frontend/src/features/admin-orders/: OrdersAdminTable.tsx
frontend/src/features/auth/: LoginForm.tsx  hooks.ts
frontend/src/features/cart/: AddToCartButton.tsx
frontend/src/pages/: AdminMenuPage.tsx  AdminOrdersPage.tsx  CartPage.tsx  CheckoutPage.tsx  MenuPage.tsx
scripts/: seed.py
(+16 files in other folders)
